# rlapi

./: .gitignore  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  NOTICE  README.md  mypy.ini  pyproject.toml  setup.cfg
.github/: CONTRIBUTING.md  mergeable.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yaml  tests.yaml
docs/: api.rst  conf.py  index.rst  intro.rst
docs/_static/: style.css
docs/ext/tier_breakdown/: api.rst  index.rst
rlapi/: VERSION  __init__.py  _utils.py  client.py  config.py  enums.py  errors.py  leaderboard.py  models.py  player.py  player_titles.py  population.py  py.typed  tier_estimates.py  typedefs.py  utils.py
rlapi/ext/tier_breakdown/: __init__.py  rlstatsnet.py  rltracker.py  trackernetwork.py
stubs/lxml/: etree.pyi
tests/: test_client.py  test_config.py
tests/fixtures/: player_not_found.json  player_profile.json
