[metadata]
name = rlapi
version = file: rlapi/VERSION
description = Async ready API wrapper for Rocket League API
license = Apache License 2.0
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = Jakub Kuczys (jack1142)
url = https://github.com/jack1142/rlapi
project_urls =
    Documentation = https://rlapi.readthedocs.io
    Donate on Patreon = https://www.patreon.com/Jackenmen
    Issue Tracker = https://github.com/jack1142/rlapi/issues
    Source Code = https://github.com/jack1142/rlapi
classifiers =
    # List at https://pypi.org/pypi?%3Aaction=list_classifiers
    Development Status :: 2 - Pre-Alpha
    Framework :: AsyncIO
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Typing :: Typed

[options]
include_package_data = True
packages = find_namespace:
python_requires = >=3.7
install_requires =
    aiohttp>=3.5.4,<3.7.0
    lxml>=4.4.2,<4.6.0
    typing_extensions>=3.7.4; python_version == "3.7"

[options.extras_require]
tests =
    mypy==0.720
docs =
    sphinx>=2.1.2,<2.2.0
    sphinxcontrib-trio==1.1.0
    sphinx_rtd_theme>=0.4.3,<0.5.0
style =
    black==19.3b0

[options.packages.find]
include =
    rlapi
    rlapi.*
