[metadata]
name = rlapi
version = file: rlapi/VERSION
description = Async ready API wrapper for Rocket League API
license = Apache License 2.0
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = Jakub Kuczys (Jackenmen)
url = https://github.com/Jackenmen/rlapi
project_urls =
    Documentation = https://rlapi.readthedocs.io
    Donate on Patreon = https://www.patreon.com/Jackenmen
    Issue Tracker = https://github.com/Jackenmen/rlapi/issues
    Source Code = https://github.com/Jackenmen/rlapi
classifiers =
    # List at https://pypi.org/pypi?%3Aaction=list_classifiers
    Development Status :: 2 - Pre-Alpha
    Framework :: AsyncIO
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Typing :: Typed

[options]
include_package_data = True
packages = find_namespace:
python_requires = >=3.8
install_requires =
    aiohttp>=3.5.4,<4.0
    lxml>=4.4.2,<6.0

[options.extras_require]
tests =
    mypy==0.782
docs =
    sphinx>=4.5.0,<5.0
    sphinxcontrib-trio>=1.1.2,<1.2
    sphinx_rtd_theme
lint =
    flake8>=4.0.1,<5.0
style =
    black>22.1.0,<23
    isort==5.10.1,<6

[options.packages.find]
include =
    rlapi
    rlapi.*
